--- a/todolist.html
+++ b/todolist.html
@@ -109,10 +109,10 @@
             <section id="content">
               <h1>To-Do List</h1>
               <ol contenteditable="true">
-                <li>Every line is editable.</li>
-                <li>Click here.</li>
-                <li>Crorcet Me.</li>
-                <li>Add a new item.</li>
+                <li>One </li>
+                <li>Two</li>
+                <li>Three</li>
+                <li>Four</li>
               </ol>
             </section>
             <div class="mu-contact-content">
