settings tab UI

--- a/settings.html
+++ b/settings.html
@@ -102,11 +102,164 @@
           <div class="mu-contact-area">
 
             <div class="mu-contact-header">
-              <h2 class="mu-heading-title">SettingsS</h2>
+              <h2 class="mu-heading-title">Settings</h2>
               <span class="mu-header-dot"></span>
               <p>Setting</p>
             </div>
+            <div class="container">
+                <div class="inner-container">
+                    <div class="card inactive-1"></div>
+                    <div class="card inactive-2"></div>
+                    <div class="card">
+                        <div class="content active">
+                            <h1>Welcome</h1>
+                            <div class="optin-container">
+                            	<div class="cta">Lets get your name</div>
+                                <input type = "text" name = "first-name" placeholder = "first name">
+                                <br> <br>
+                              <!-- <div class="input-group">
+                                <label for="input-1" data-module="blink-input">
+                                  <input class="input" id="input-1" placeholder="Enter your name" data-module="blink-input-el"/>
+                                  <div class="input-after" data-module="blink-input-cursor"></div>
+                                  <div class="input-text" data-module="blink-input-text"></div>
+                                  <div class="input-text-short" data-module="blink-input-text-short"></div>
+                                </label>
+                              </div> -->
 
+                            </div>
+
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Birthday?</h1>
+
+                            <select name = "month">
+                              <option value = "january">January</option>
+                              <option value = "february">February</option>
+                              <option value = "march">March</option>
+                              <option value = "april">April</option>
+                              <option value = "may">May</option>
+                              <option value = "june">June</option>
+                              <option value = "july">July</option>
+                              <option value = "august">August</option>
+                              <option value = "september">September</option>
+                              <option value = "october">October</option>
+                              <option value = "november">November</option>
+                              <option value = "december">December</option>
+                            </select>
+                            <select name = "day">
+                              <option value = "first">1</option>
+                              <option value = "second">2</option>
+                              <option value = "third">3</option>
+                              <option value = "fourth">4</option>
+                              <option value = "fifth">5</option>
+                              <option value = "sixth">6</option>
+                              <option value = "seventh">7</option>
+                              <option value = "eighth">8</option>
+                              <option value = "ninth">9</option>
+                              <option value = "tenth">10</option>
+                              <option value = "eleventh">11</option>
+                              <option value = "twelfth">12</option>
+                              <option value = "thirteenth">13</option>
+                              <option value = "fourteenth">14</option>
+                              <option value = "fifteenth">15</option>
+                              <option value = "sixteenth">16</option>
+                              <option value = "seventeenth">17</option>
+                              <option value = "eigthteenth">18</option>
+                              <option value = "nineteenth">19</option>
+                              <option value = "twentieth">20</option>
+                              <option value = "twenty-first">21</option>
+                              <option value = "twenty-second">22</option>
+                              <option value = "twenty-third">23</option>
+                              <option value = "twenty-fourth">24</option>
+                              <option value = "twenty-fifth">25</option>
+                              <option value = "twenty-sixth">26</option>
+                              <option value = "twenty-seventh">27</option>
+                              <option value = "twenty-eighth">28</option>
+                              <option value = "twenty-ninth">29</option>
+                              <option value = "thirtieth">30</option>
+                              <option value = "thirty-first">31</option>
+                            </select>
+                            <br> <br>
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Time Zone?</h1>
+                            <select name = "time_zone">
+                              <option value = "est">Eastern Standard Time</option>
+                              <option value = "ct">Central Time</option>
+                              <option value = "mt">Mountain Time</option>
+                              <option value = "pdt">Pacific Daylight Time</option>
+                            </select>
+                            <br><br>
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Bedtime?</h1>
+                            <select name = "bed_time">
+                              <option value = "eight"> 8:00</option>
+                              <option value = "eight_fifteen"> 8:15</option>
+                              <option value = "eight_thirty">8:30</option>
+                              <option value = "eight_forty_five"> 8:45</option>
+                              <option value = "nine"> 9:00</option>
+                              <option value = "nine_fifteen">9:15</option>
+                              <option value = "nine_thirty">9:30</option>
+                              <option value = "nine_forty_five"> 9:45</option>
+                              <option value = "ten"> 10:00</option>
+                              <option value = "ten_fifteen">10:15</option>
+                              <option value = "ten_thirty">10:30</option>
+                              <option value = "ten_forty_five"> 10:45</option>
+                              <option value = "eleven"> 11:00</option>
+                              <option value = "eleven_fifteen">11:15</option>
+                              <option value = "eleven_thirty">11:30</option>
+                              <option value = "eleven_forty_five"> 11:45</option>
+                              <option value = "twelve"> 12:00</option>
+                              <option value = "twelve_fifteen">12:15</option>
+                              <option value = "twelve_thirty">12:30</option>
+                              <option value = "twelve_forty_five"> 12:45</option>
+                              <option value = "one"> 1:00</option>
+                            </select>
+                            <br><br>
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Health Goals?</h1>
+                            <select name = "health_priority">
+                              <option value = "drink_more">Drink More Water</option>
+                              <option value = "eat_healthy">Eat Healthier</option>
+                              <option value = "exercise">Exercise More</option>
+                              <option value = "more_sleep">Go to Bed Earlier</option>
+                            </select>
+
+                            <br><br>
+                            <a class="button" href="#">Next Step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Mood Goal?</h1>
+                            <select name = "mood">
+                              <option value = "inspired">Inspired</option>
+                              <option value = "confident">Confident</option>
+                              <option value = "happy">Happy</option>
+                            </select>
+                            <br><br>
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>Light/Dark Mode</h1>
+                            <p>Toggle</p><br><br>
+                            <a class="button" href="#">Next step &rarr;</a>
+                        </div>
+                        <div class="content">
+                            <h1>You're All Set!</h1>
+                            <p>Go to the Menu to go HOME<br> or continue to personalize settings </p>
+                            <a class="button" href="#">Restart &rarr;</a>
+                        </div>
+                        <div class="progress-container">
+                            <div class="step"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="mu-contact-content">
               <div class="row">
 
@@ -149,6 +302,7 @@
 
 	</footer>
 	<!-- End footer -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
