--- a/settings.html
+++ b/settings.html
@@ -12,6 +12,7 @@
     <link href="assets/css/slick.css" rel="stylesheet">
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
+    <link href="assets/css/settings.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
