--- a/weather/weather.html
+++ b/weather/weather.html
@@ -5,9 +5,45 @@
     <script src="templates/weather.js"></script>
   </head>
   <body>
-    <input type="textbox" id="searchterm" placeholder="zip code">
+    <input type="textbox" id="searchterm" placeholder="zip code,postal code or city name">
     <input type="button" id="click" value="submit">
-    <div id="results">
+    <div class ="output">
+      <div id="date">
+        <h5>Today's Weather</h5>
+      </div>
+      <div id="temp_C">
+        <h5>Temperature in Celsius</h5>
+      </div>
+      <div id="temp_F">
+        <h5>Temperature in Farhenheit</h5>
+      </div>
+      <div id="maxtempC">
+        <h5>Maximum Temperature in Celsius</h5>
+      </div>
+      <div id="maxtempF">
+        <h5>Maximum Temperature in Farhenheit</h5>
+      </div>
+      <div id="mintempC">
+        <h5>Minimum Temperature in Celsius</h5>
+      </div>
+      <div id="mintempF">
+        <h5>Minimum Temperature in Farhenheit</h5>
+      </div>
+      <div id="chanceofrain">
+        <h5>Chance of Rain</h5>
+      </div>
+      <div id="chanceofsunshine">
+        <h5>Chance of Sunshine</h5>
+      </div>
+      <div id="chanceofovercast">
+        <h5>Chance of Overcast</h5>
+      </div>
+      <div id="chanceofsnow">
+        <h5>Chance of Snow</h5>
+      </div>
+      <div id="chanceofthunder">
+        <h5>Chance of Thunder</h5>
+      </div>
     </div>
   </body>
 </html>
