--- a/about_us.html
+++ b/about_us.html
@@ -4,13 +4,12 @@
     <title>About Us</title>
     <link rel ="stylesheet" href="assets/css/about.css">
     <h1>About Us</h1>
-    <br>
-    <br>
   </head>
   <body>
-  <h2>Why?<h2>
+    <h2>Why?<h2>
     <h4>
-      <p>
+      <p> The ever-so-present link between organization and mental health is something that affects everyone every day; as organization improves, as does your mental health. Due to the recent rise in stress-related mental health issues in university students, we decided to create an app that reduces stress and makes life easier. What you do is difficult. Why not make how you organize it easier? That is why we created Classify<br>
+      Classify is your go-to organizational app. Upon logging in, the viewer can customize the homepage that greets them and tells them the day’s weather. They can set their bedtime for reminders and even change their page’s display by using light and dark mode. On other pages, they can enter their to-do list and learn about what they prioritize in terms of their health.
       </p>
     </h4>
     <br>
@@ -18,6 +17,13 @@
   <h2>Statistics<h2>
     <h4>
       <p>
+        <span><b>•30% </b>rise in university students seeking stress-related counselling.</span>
+        <br>
+        <span><b>•>45% </b>of young adults who stopped attending university due to mental health issues did not request accomodations. </span>
+        <span><b>50% </b>of them did not access mental health services or supports either</span>
+        <br>
+        <span><b>•>40% </b>of students with diagnosable mental health conditions did not seek help. </span>
+        <span><b>57% </b>of them did not request accomodations from their school either</span>
       </p>
     </h4>
     <br>
