--- a/schedule_calendar/schedule.html
+++ b/schedule_calendar/schedule.html
@@ -7,171 +7,9 @@
   <body>
     <form method= "post">
       <h5> <h5>
-      Event Name <br>
-      <input type = "text" name = "first-name" placeholder = "event name">
-      <br>
-      <br>
-      Year: <br>
-      <select name = "year">
-        <option value = "twenty_nineteen">2019</option>
-        <option value = "twenty_twenty">2020</option>
-        <option value = "twenty_twenty_one">2021</option>
-        <option value = "twenty_twenty_two">2022</option>
-      </select>
-      <br>
-      <br>
-      Month: <br>
-      <select name = "month">
-        <option value = "january">January</option>
-        <option value = "february">February</option>
-        <option value = "march">March</option>
-        <option value = "april">April</option>
-        <option value = "may">May</option>
-        <option value = "june">June</option>
-        <option value = "july">July</option>
-        <option value = "august">August</option>
-        <option value = "september">September</option>
-        <option value = "october">October</option>
-        <option value = "november">November</option>
-        <option value = "december">December</option>
-      </select>
-      <br>
-      <br>
-      Day: <br>
-      <select name = "day">
-        <option value = "first">1</option>
-        <option value = "second">2</option>
-        <option value = "third">3</option>
-        <option value = "fourth">4</option>
-        <option value = "fifth">5</option>
-        <option value = "sixth">6</option>
-        <option value = "seventh">7</option>
-        <option value = "eighth">8</option>
-        <option value = "ninth">9</option>
-        <option value = "tenth">10</option>
-        <option value = "eleventh">11</option>
-        <option value = "twelfth">12</option>
-        <option value = "thirteenth">13</option>
-        <option value = "fourteenth">14</option>
-        <option value = "fifteenth">15</option>
-        <option value = "sixteenth">16</option>
-        <option value = "seventeenth">17</option>
-        <option value = "eigthteenth">18</option>
-        <option value = "nineteenth">19</option>
-        <option value = "twentieth">20</option>
-        <option value = "twenty-first">21</option>
-        <option value = "twenty-second">22</option>
-        <option value = "twenty-third">23</option>
-        <option value = "twenty-fourth">24</option>
-        <option value = "twenty-fifth">25</option>
-        <option value = "twenty-sixth">26</option>
-        <option value = "twenty-seventh">27</option>
-        <option value = "twenty-eighth">28</option>
-        <option value = "twenty-ninth">29</option>
-        <option value = "thirtieth">30</option>
-        <option value = "thirty-first">31</option>
-      </select>
-      <br>
-      <br>
-      Start Time <br>
-      <select name = "start_time">
-        <option value = "twelve_am"> 12:00 AM</option>
-        <option value = "twelve_fifteen_am">12:15 AM</option>
-        <option value = "twelve_thirty_am">12:30 AM</option>
-        <option value = "twelve_forty_five_am"> 12:45 AM</option>
-        <option value = "one_am"> 1:00 AM</option>
-        <option value = "one_fifteen_am">1:15 AM</option>
-        <option value = "one_thirty_am">1:30 AM</option>
-        <option value = "one_forty_five_am"> 1:45 AM</option>
-        <option value = "two_am"> 2:00 AM</option>
-        <option value = "two_fifteen_am">2:15 AM</option>
-        <option value = "two_thirty_am">2:30 AM</option>
-        <option value = "two_forty_five_am"> 2:45 AM</option>
-        <option value = "three_am"> 3:00 AM</option>
-        <option value = "three_fifteen_am">3:15 AM</option>
-        <option value = "three_thirty_am">3:30 AM</option>
-        <option value = "three_forty_five_am"> 3:45 AM</option>
-        <option value = "four_am"> 4:00 AM</option>
-        <option value = "four_fifteen_am">4:15 AM</option>
-        <option value = "four_thirty_am">4:30 AM</option>
-        <option value = "four_forty_five_am"> 4:45 AM</option>
-        <option value = "five_am"> 5:00 AM</option>
-        <option value = "five_fifteen_am">5:15 AM</option>
-        <option value = "five_thirty_am">5:30 AM</option>
-        <option value = "five_forty_five_am"> 5:45 AM</option>
-        <option value = "six_am"> 6:00 AM</option>
-        <option value = "six_fifteen_am">6:15 AM</option>
-        <option value = "six_thirty_am">6:30 AM</option>
-        <option value = "six_forty_five_am"> 6:45 AM</option>
-        <option value = "seven_am"> 7:00 AM</option>
-        <option value = "seven_fifteen_am">7:15 AM</option>
-        <option value = "seven_thirty_am">7:30 AM</option>
-        <option value = "seven_forty_five_am"> 7:45 AM</option>
-        <option value = "eight_am"> 8:00 AM</option>
-        <option value = "eight_fifteen_am"> 8:15 AM</option>
-        <option value = "eight_thirty_am">8:30 AM</option>
-        <option value = "eight_forty_five_am"> 8:45 AM</option>
-        <option value = "nine_am"> 9:00 AM</option>
-        <option value = "nine_fifteen_am">9:15 AM</option>
-        <option value = "nine_thirty_am">9:30 AM</option>
-        <option value = "nine_forty_five_am"> 9:45 AM</option>
-        <option value = "ten_am"> 10:00 AM</option>
-        <option value = "ten_fifteen_am">10:15 AM</option>
-        <option value = "ten_thirty_am">10:30 AM</option>
-        <option value = "ten_forty_five_am"> 10:45 AM</option>
-        <option value = "eleven_am"> 11:00 AM</option>
-        <option value = "eleven_fifteen_am">11:15 AM</option>
-        <option value = "eleven_thirty_am">11:30 AM</option>
-        <option value = "eleven_forty_five_am"> 11:45 AM</option>
-        <option value = "twelve_pm"> 12:00 PM</option>
-        <option value = "twelve_fifteen_pm">12:15 PM</option>
-        <option value = "twelve_thirty_pm">12:30 PM</option>
-        <option value = "twelve_forty_five_pm"> 12:45 PM</option>
-        <option value = "one_pm"> 1:00 PM</option>
-        <option value = "one_fifteen_pm">1:15 PM</option>
-        <option value = "one_thirty_pm">1:30 PM</option>
-        <option value = "one_forty_five_pm"> 1:45 PM</option>
-        <option value = "two_pm"> 2:00 PM</option>
-        <option value = "two_fifteen_pm">2:15 PM</option>
-        <option value = "two_thirty_pm">2:30 PM</option>
-        <option value = "two_forty_five_pm"> 2:45 PM</option>
-        <option value = "three_pm"> 3:00 PM</option>
-        <option value = "three_fifteen_pm">3:15 PM</option>
-        <option value = "three_thirty_pm">3:30 PM</option>
-        <option value = "three_forty_five_pm"> 3:45 PM</option>
-        <option value = "four_pm"> 4:00 PM</option>
-        <option value = "four_fifteen_pm">4:15 PM</option>
-        <option value = "four_thirty_pm">4:30 PM</option>
-        <option value = "four_forty_five_pm"> 4:45 PM</option>
-        <option value = "five_pm"> 5:00 PM</option>
-        <option value = "five_fifteen_pm">5:15 PM</option>
-        <option value = "five_thirty_pm">5:30 PM</option>
-        <option value = "five_forty_five_pm"> 5:45 PM</option>
-        <option value = "six_pm"> 6:00 PM</option>
-        <option value = "six_fifteen_pm">6:15 PM</option>
-        <option value = "six_thirty_pm">6:30 PM</option>
-        <option value = "six_forty_five_pm"> 6:45 PM</option>
-        <option value = "seven_pm"> 7:00 PM</option>
-        <option value = "seven_fifteen_pm">7:15 PM</option>
-        <option value = "seven_thirty_pm">7:30 PM</option>
-        <option value = "seven_forty_five_pm"> 7:45 PM</option>
-        <option value = "eight_pm"> 8:00 PM</option>
-        <option value = "eight_fifteen_pm"> 8:15 PM</option>
-        <option value = "eight_thirty_pm">8:30 PM</option>
-        <option value = "eight_forty_five_pm"> 8:45 PM</option>
-        <option value = "nine_pm"> 9:00 PM</option>
-        <option value = "nine_fifteen_pm">9:15 PM</option>
-        <option value = "nine_thirty_pm">9:30 PM</option>
-        <option value = "nine_forty_five_pm"> 9:45 PM</option>
-        <option value = "ten_pm"> 10:00 PM</option>
-        <option value = "ten_fifteen_pm">10:15 PM</option>
-        <option value = "ten_thirty_pm">10:30 PM</option>
-        <option value = "ten_forty_five_pm"> 10:45 PM</option>
-        <option value = "eleven_pm"> 11:00 PM</option>
-        <option value = "eleven_fifteen_pm">11:15 PM</option>
-        <option value = "eleven_thirty_pm">11:30 PM</option>
-        <option value = "eleven_forty_five_pm"> 11:45 PM</option>
-      </select>
+      Country (type us for USA and ca for Canada)<br>
+        <input type = "textbox" id="searchterm" placeholder="country">
+        <input type="button" id="click" value="submit">
       <br>
       <br>
       <br>
