--- a/about_us.html
+++ b/about_us.html
@@ -5,10 +5,10 @@
     <link rel ="stylesheet" href="assets/css/about.css">
     <h1>About Us</h1>
     <br>
-    <br>
   </head>
   <body>
     <h2>Why?<h2>
+      <br>
     <h4>
       <span>
         <p> Increased stress in students invites more problems to arise such as drug and alcohol problems, lower grades and more. The ever-so-present link between organization and mental health is something that affects everyone every day; as organization improves, as does your mental health. Due to the recent rise in stress-related mental health issues in university students, we decided to create an app that reduces stress and makes life easier. What you do is difficult. Why not make how you organize it easier? That is why we created Classify.<br>
@@ -19,18 +19,14 @@
     <br>
     <br>
   <h2>Statistics<h2>
+    <br>
     <h4>
       <p>
         <span><b>•30% </b>rise in university students seeking stress-related counselling.</span>
         <br>
-        <span><b>•greater than 45% </b>of young adults who stopped attending university due to mental health issues did not request accomodations. </span>
-        <span><b>50% </b>of them did not access mental health services or supports either</span>
+        <span><b>•greater than 45% </b>of young adults who stopped attending university due to mental health issues did not request accomodations. <b>50% </b>of them did not access mental health services or supports either</span>
         <br>
-        <span><b>•40% </b>of students with diagnosable mental health conditions did not seek help. </span>
-        <span><b>57% </b>of them did not request accomodations from their school either</span>
-        <br>
-        <br>
-        <span><c>STIGMA IS THE MAIN REASON WHY STUDENTS DID NOT SEEK HELP</c></span>
+        <span><b>•40% </b>of students with diagnosable mental health conditions did not seek help. <b>57% </b>of them did not request accomodations from their school either</span>
       </p>
     </h4>
     <br>
@@ -39,20 +35,20 @@
     <h4>
       <span>
         <p>
-          <img class = "pic" src="test1.png" ALIGN= "left">
-          Caroline is an 19 year old student from North Vancouver, British Columbia. She will be studying Statistics and Analytics at the University of North Carolina at Chapel Hill in the fall. <br><br>
-          <img class = "pic" src="test2.png" ALIGN= "right">
+          <img class = "pic" src="assets/css/test1.jpeg" ALIGN= "left"> <br>
+          <d>Caroline Glazier is a student from North Vancouver, British Columbia. She will be studying Statistics and Analytics at the University of North Carolina at Chapel Hill in the fall. <br><br>
+          <img class = "pic" src="assets/css/test2.jpeg" ALIGN= "right">
+          Daniel Villarreal is a student from Clarskville, Arkansas. He will be majoring in Computer Science at Arkansas Tech University in the fall.
           <br><br>
-            <img class = "pic" src="test3.png" ALIGN = "left">
+          <img class = "pic" src="assets/css/test3.jpeg" ALIGN = "left">
+          Brenna Nieva was born and raised in Seattle, Washington. This fall, she will be majoring in Computer Science at Western Washington University's Computer Science Scholars Program.
+        </d>
       </span>
 
 
       </p>
     </h4>
-    <br>
-    <br>
-    <br>
-    <br>
+
   <input type="button" id="goHome" value="Home">
   </body>
 </html>
