--- a/weather/weather.html
+++ b/weather/weather.html
@@ -3,46 +3,69 @@
   <head>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="templates/weather.js"></script>
+    <link rel ="stylesheet" href="styles/weather.css">
   </head>
   <body>
-    <input type="textbox" id="searchterm" placeholder="zip code,postal code or city name">
-    <input type="button" id="click" value="submit">
+    <div id="date">
+      <h1>Today's Weather</h1> <br>
+    </div>
+    <input type="textbox" id="searchterm" placeholder="zip code,postal code or city name"> <br>
+    <input type="button" id="click" value="submit"> <br> <br>
     <div class ="output">
-      <div id="date">
-        <h5>Today's Weather</h5>
-      </div>
       <div id="temp_C">
-        <h5>Temperature in Celsius</h5>
+        <h5>Temperature in Celsius:</h5> <br>
+
+        <br>
       </div>
       <div id="temp_F">
-        <h5>Temperature in Farhenheit</h5>
+        <h5>Temperature in Farhenheit:</h5> <br>
+
+        <br>
       </div>
       <div id="maxtempC">
-        <h5>Maximum Temperature in Celsius</h5>
+        <h5>Maximum Temperature in Celsius:</h5> <br>
+
+        <br>
       </div>
       <div id="maxtempF">
-        <h5>Maximum Temperature in Farhenheit</h5>
+        <h5>Maximum Temperature in Farhenheit:</h5> <br>
+
+        <br>
       </div>
       <div id="mintempC">
-        <h5>Minimum Temperature in Celsius</h5>
+        <h5>Minimum Temperature in Celsius:</h5> <br>
+
+        <br>
       </div>
       <div id="mintempF">
-        <h5>Minimum Temperature in Farhenheit</h5>
+        <h5>Minimum Temperature in Farhenheit:</h5 <br> <br>
+
+          <br>
       </div>
       <div id="chanceofrain">
-        <h5>Chance of Rain</h5>
+        <h5>Chance of Rain:</h5> <br>
+
+        <br>
       </div>
       <div id="chanceofsunshine">
-        <h5>Chance of Sunshine</h5>
+        <h5>Chance of Sunshine:</h5> <br>
+
+        <br>
       </div>
       <div id="chanceofovercast">
-        <h5>Chance of Overcast</h5>
+        <h5>Chance of Overcast:</h5> <br>
+
+        <br>
       </div>
       <div id="chanceofsnow">
-        <h5>Chance of Snow</h5>
+        <h5>Chance of Snow:</h5> <br>
+
+        <br>
       </div>
       <div id="chanceofthunder">
-        <h5>Chance of Thunder</h5>
+        <h5>Chance of Thunder:</h5> <br>
+
+        <br>
       </div>
     </div>
   </body>
