--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h2>Why?<h2>
-      <br>
     <h4>
       <span>
         <p> Increased stress in students invites more problems to arise such as drug and alcohol problems, lower grades and more. The ever-so-present link between organization and mental health is something that affects everyone every day; as organization improves, as does your mental health. Due to the recent rise in stress-related mental health issues in university students, we decided to create an app that reduces stress and makes life easier. What you do is difficult. Why not make how you organize it easier? That is why we created Classify.<br>
@@ -19,7 +18,6 @@
     <br>
     <br>
   <h2>Statistics<h2>
-    <br>
     <h4>
       <p>
         <span><b>•30% </b>rise in university students seeking stress-related counselling.</span>
@@ -30,18 +28,22 @@
       </p>
     </h4>
     <br>
-    </br>
   <h2>Creators<h2>
     <h4>
       <span>
         <p>
-          <img class = "pic" src="assets/css/test1.jpeg" ALIGN= "left"> <br>
-          <d>Caroline Glazier is a student from North Vancouver, British Columbia. She will be studying Statistics and Analytics at the University of North Carolina at Chapel Hill in the fall. <br><br>
-          <img class = "pic" src="assets/css/test2.jpeg" ALIGN= "right">
+          <img class = "pic" src="assets/css/Caroline_and_Daniel.jpeg" ALIGN= "right"> <br>
+          <img class = "pic" src="assets/css/Brenna.jpeg" ALIGN= "left">
+          <br>
+          <br>
+          <c>CLASSIFY IS AN APP CREATED BY UNIVERSITY STUDENTS FOR UNIVERSITY STUDENTS</c>
+            <br><br><br><br>
+          <d>Brenna Nieva was born and raised in Seattle, Washington. This fall, she will be majoring in Computer Science at Western Washington University's Computer Science Scholars Program. <br><br><br>
+            Caroline Glazier is a student from North Vancouver, British Columbia. She will be studying Statistics and Analytics at the University of North Carolina at Chapel Hill in the fall. 
+          <br><br><br>
           Daniel Villarreal is a student from Clarskville, Arkansas. He will be majoring in Computer Science at Arkansas Tech University in the fall.
-          <br><br>
-          <img class = "pic" src="assets/css/test3.jpeg" ALIGN = "left">
-          Brenna Nieva was born and raised in Seattle, Washington. This fall, she will be majoring in Computer Science at Western Washington University's Computer Science Scholars Program.
+          <br><br><br><br>
+
         </d>
       </span>
 
